# nwfre

./: .gitignore  README.md  generate.py  parse_json.py  pyproject.toml  requirements.txt
docs/: index.html
templates/: index.jinja
visualizations/: analysis.html
