[tool.poetry]
name = "nwfre"
version = "0.1.0"
description = ""
authors = ["Miles Z. Sterrett <miles@mileszs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
jinja2 = "^3.1.4"
matplotlib = "3.10.0"
pandas = "^2.2.3"
plotly = "^5.24.1"
python = "^3.13"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
