[tool.poetry]
name = "nwfre"
version = "0.1.0"
description = ""
authors = ["Miles Z. Sterrett <miles@mileszs.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
jinja2 = "^3.1.4"
pandas = "^2.2.3"
plotly = "^5.24.1"
python = "^3.13"
statsmodels = "^0.14.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
